# financial-models-streamlit

./: .dockerignore  .env.example  .gitignore  .gitmodules  .tool-versions  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  start.sh
.do/: app.prod.yaml  app.yaml
.streamlit/: config.toml  secrets.toml
api/: __init__.py  main.py
api/paystack/: __init__.py  client.py  events.py  signature.py
app/: __init__.py  config.py  logging_setup.py  paystack_check.py  paystack_sync_plans.py  streamlit_app.py
app/admin/: __init__.py  __main__.py  analytics.py  service.py
app/auth/: __init__.py  cookie.py  gating.py  passwords.py  ratelimit.py  service.py  tokens.py
app/db/: __init__.py  engine.py  models.py  seed.py
app/email/: __init__.py  client.py  templates.py
app/pages/: account.py  admin_analytics.py  admin_users.py  forgot_password.py  login.py  model_landing.py  model_workspace.py  models_dashboard.py  pricing.py  privacy.py  reset_password.py  signup.py  terms.py  verify_email.py
app/plugin/: __init__.py  contract.py  registry.py
app/reports/: __init__.py  background.py  commentary.py  pdf_style.py  service.py  ui.py
migrations/: env.py
migrations/versions/: a5b6c7d33333_add_refunds_and_admin_audit.py  acfa4339a289_add_is_admin_to_users.py  b1c9e2f4a801_add_webhook_events.py  c2a4d5f12345_add_email_verified_at.py  d3b6e7a45678_add_llm_token_counters.py  e4f9b0c23456_add_auth_rate_limits.py  e7f2a3b11111_add_file_data_to_report_runs.py  f0d048b1098e_initial_schema.py  f3d4e5c22222_add_commentary_runs.py
models/biotech/: plugin.py
models/cassava-ethanol/: plugin.py
models/chicken-farming/: plugin.py
models/goat-farming/: plugin.py
models/microbrewery/: plugin.py
models/pharma/: plugin.py
models/solar-farm/: plugin.py
scripts/: deploy-prod.sh  deploy-staging.sh
tests/: test_account_settings.py  test_admin.py  test_auth_core.py  test_auth_service.py  test_commentary.py  test_email_client.py  test_password_reset.py  test_paystack_signature.py  test_paystack_webhook.py  test_plugin_contract.py  test_reports_service.py
