[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-models-streamlit"
version = "0.1.0"
description = "Unified Streamlit SaaS hosting Zenkos financial models behind auth + Paystack subscriptions."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
