[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-models-streamlit"
version = "0.1.0"
description = "Unified Streamlit SaaS hosting Zenkos financial models behind auth + Paystack subscriptions."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "openpyxl>=3.1",
    "streamlit>=1.37",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "PyJWT>=2.8",
    "email-validator>=2.0",
    "streamlit-cookies-controller>=0.0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
