[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-models-streamlit"
version = "0.1.0"
description = "Unified Streamlit SaaS hosting Numquants financial models behind auth + Paystack subscriptions."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "python-docx>=1.1",
    "streamlit>=1.37",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "PyJWT>=2.8",
    "email-validator>=2.0",
    "streamlit-cookies-controller>=0.0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "openai>=1.40",
    "anthropic>=0.40",
    "python-json-logger>=2.0",
    # ── Submodule deps ─────────────────────────────────────────────────────────
    # Top-level imports (break module load if missing):
    "requests>=2.28",         # biotech/streamlit_app.py
    "altair>=5,<6",           # chicken-farming/streamlit_app.py
    # Lazy imports (break specific features if missing):
    "scikit-learn>=1.3",      # cassava-ethanol AdvancedAnalyticsToolkit, microbrewery predictive analytics
    "statsmodels>=0.14",      # cassava-ethanol ARIMA forecasting
    "pypdf>=3.0",             # chicken-farming + pharma PDF reading (also satisfies PyPDF2 callers)
    "python-pptx>=0.6",       # chicken-farming PowerPoint export
    "fpdf2>=2.7",             # pharma PDF generation (provides `from fpdf import FPDF`)
    # Always needed:
    "networkx>=3.0",          # cassava-ethanol/bioethanol_model/advanced_tools.py
    "numpy-financial>=1.0",   # cassava-ethanol + pharma + solar-farm (npf.irr, npf.npv)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
datadog = [
    "ddtrace>=2.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
